[project]
name = "sparta-final-project-team12"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastparquet>=2026.3.0",
    "gdown>=6.0.0",
    "matplotlib>=3.10.9",
    "networkx>=3.6.1",
    "numpy>=2.4.4",
    "pandas>=3.0.3",
    "plotly>=6.7.0",
    "pyarrow>=24.0.0",
    "streamlit>=1.57.0",
    "wordcloud>=1.9.6",
]
